# aahi

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
agents/: pr-lint.yaml
runtime/: server.ts  tsconfig.json
runtime/agents/: custom.agent.ts  deploy.agent.ts  featureflag.agent.ts  impact.agent.ts  oncall.agent.ts  proactive.agent.ts  query.agent.ts  release.agent.ts  review.agent.ts  security.agent.ts
runtime/auth/: auth-manager.ts  index.ts  keychain-native.ts
runtime/secrets/: index.ts  secret-scanner.ts  vault-client.ts
runtime/telemetry/: audit-logger.ts  index.ts  log-parser.ts  metric-collector.ts
runtime/terminal/: index.ts  pty-manager.ts
runtime/workspace/: index.ts  workspace-config.ts
src/: App.tsx  aahi.ts  index.html  index.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs_watcher.rs  indexer.rs  ipc.rs  keychain.rs  main.rs  secret_scanner.rs  token_counter.rs
src/agents/: cost.agent.ts  debug.agent.ts  incident.agent.ts  scaffold.agent.ts  teambrain.agent.ts  temporal.agent.ts
src/bridge/: index.ts  runtime-client.ts  tauri-bridge.ts
src/components/: AgentStepCard.tsx  ApprovalGateCard.tsx  BottomPanel.tsx  Breadcrumbs.tsx  ContextChunkCard.tsx  ErrorBoundary.tsx  ModelPicker.tsx  ProgressBar.tsx  Sidebar.tsx  StatusBar.tsx  ToastNotification.tsx  TopBar.tsx
src/editor/: AIDecorations.tsx  CommandPalette.tsx  EditorContextMenu.tsx  FileExplorer.tsx  GhostText.tsx  TabBar.tsx  (+4 more)
(+116 files in other folders)
